# todos-rust

./: .env.example  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.dev.yml  justfile
.trunk/: trunk.yaml
src/: lib.rs  main.rs  startup.rs  telemetry.rs
src/configuration/: mod.rs
src/routes/: mod.rs  ping_route.rs  todos_routes.rs
src/tools/: configuration.rs
tests/: ping.rs
