[package]
name = "todos_api"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
path = "src/main.rs"
name = "todos_api"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.2"
tracing-actix-web = "0.6"
lazy_static = "1.4.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
once_cell = "1.8.0"
reqwest = "0.11.4"
